# KakaliRenderer

./: .gitignore  CMakeLists.txt  README.md  premake5.lua  setup-cmake.sh  setup-window-premake.bat  setup-windows-cmake.bat
Kakali/: CMakeLists.txt  premake5.lua
Kakali/src/: main.cpp  pch.h
Kakali/src/core/: Application.cpp  Application.h  Input.cpp  Input.h  Log.h  Window.cpp  Window.h
Kakali/src/events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Kakali/src/gl/: Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PerspectiveCameraController.cpp  PerspectiveCameraController.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  SubTexture.cpp  SubTexture.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
Kakali/src/layers/: ImGuiLayer.cpp  ImGuiLayer.h  Layer.h  LayerStack.cpp  LayerStack.h  SandboxLayer.cpp  SandboxLayer.h
Kakali/src/res/shaders/: basic.frag  basic.vert  lighting.frag  lighting.vert  shadow.frag  shadow.vert  skybox.frag  skybox.vert
